# victoria-metrics-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  vm-cluster.toml
src/: api.rs  config.rs  error.rs  main.rs  utils.rs
src/commands/: admin.rs  debug.rs  export.rs  health.rs  import.rs  mod.rs  query.rs
