[package]
name = "vm-cli"
version = "0.1.0"
edition = "2021"
authors = ["izuna <dkapitsev@gmail.com>"]
description = "CLI инструмент для работы с VictoriaMetrics"
license = "MIT"
repository = "https://github.com/Deplee/victoria-metrics-cli"
keywords = ["victoriametrics", "cli", "monitoring", "metrics"]
categories = ["command-line-utilities", "monitoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output and formatting
colored = "2.0"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dirs = "5.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif = "0.17"

# CSV handling
csv = "1.3"

# Time parsing
humantime = "2.1"

[dev-dependencies]
tokio-test = "0.4"
